--- a/src/app/shared/change-password/change-password.component.html
+++ b/src/app/shared/change-password/change-password.component.html
@@ -1,8 +1,18 @@
 <form #passwordForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="field">
+        <label for="oldPassword">Old Password</label>
+        <p-password id="oldPassword" name="oldPassword" [(ngModel)]="oldPassword" #oldPasswordField="ngModel" required
+            [feedback]="false" minlength="8">
+        </p-password>
+        <small *ngIf="oldPasswordField.invalid && oldPasswordField.touched" class="text-danger">
+            <span *ngIf="oldPasswordField.errors?.['required']">Password is required.</span>
+            <span *ngIf="oldPasswordField.errors?.['minlength']">Password must be at least 8 characters.</span>
+        </small>
+    </div>
+    <div class="field">
         <label for="password">Password</label>
         <p-password id="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required minlength="8"
-            [feedback]="false" (ngModelChange)="checkPasswordMatch()">
+            [feedback]="false" (ngModelChange)="checkPasswordMatch()" toggleMask>
         </p-password>
         <small *ngIf="passwordField.invalid && passwordField.touched" class="text-danger">
             <span *ngIf="passwordField.errors?.['required']">Password is required.</span>
