--- a/src/app/user/user-dashboard.component.html
+++ b/src/app/user/user-dashboard.component.html
@@ -1,17 +1,68 @@
-<div class="container-fluid p-0">
+<!-- <div class="container-fluid p-0">
     <div class="row m-0">
         <div class="col-12 text-center py-3 bg-dark text-white">
             <h1>Welcome, {{userName}}!</h1>
         </div>
     </div>
-</div>
+</div> -->
 <div class="grid">
+    <div class="col-3">
+        <p-card header="Welcome, {{ userName }}" styleClass="p-shadow-4">
+            <!-- <ng-template pTemplate="header">
+                <div class="p-text-center p-text-bold">
+                    User Details
+                </div>
+            </ng-template> -->
+            <ng-template pTemplate="content">
+                <!-- <div class="p-d-flex p-flex-column p-ai-center p-py-2">
+                    <p><strong><span>Total Invested Amount:</span></strong> {{ 5000 | currency }}</p>
+                    <p><strong><span>Rate of Interest:</span></strong> {{ 5 }}%</p>
+                    <p><strong>Investment Tenure:</strong> 2 years</p>
+                </div> -->
+                <div class="form-row">
+                    <label class="form-label">Total Invested Amount:</label>
+                    <span>{{ 5000 | currency }}</span>
+                </div>
+                <div class="form-row">
+                    <label class="form-label">Rate of Interest:</label>
+                    <span>{{ 5 }}%</span>
+                </div>
+                <div class="form-row">
+                    <label class="form-label">Investment Tenure:</label>
+                    <span>2 years</span>
+                </div>
+            </ng-template>
+        </p-card>
+    </div>
+    <div class="col-3">
+        <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+            style="width: 100%; height: 220px; display: block;" [(update)]="updatePieChartFlag">
+        </highcharts-chart>
+    </div>
     <div class="col-12">
+        <!-- <div class="card">
+            <p-panel [toggleable]="true">
+                <ng-template pTemplate="header">
+                    <div class="flex align-items-center gap-2">
+                        <span class="font-bold">
+                            Investments Summary
+                        </span>
+                    </div>
+                </ng-template>
+                <ng-template pTemplate="icons">
+                    <button class="p-panel-header-icon p-link mr-2">
+                        <span class="pi pi-refresh"></span>
+                    </button>
+                </ng-template>
+
+            </p-panel>
+        </div> -->
         <div class="card">
             <p-table #userTransactionsGrid [value]="userTransactions" [paginator]="true" [rows]="10"
                 responsiveLayout="scroll" [globalFilterFields]="['amount', 'portfolioName']">
                 <ng-template pTemplate="caption">
-                    <div class="flex">
+                    <div class="flex align-items-center justify-content-between">
+                        Your Transactions
                         <p-iconField iconPosition="left" class="ml-auto">
                             <p-inputIcon>
                                 <i class="pi pi-search"></i>
@@ -24,29 +75,27 @@
                 </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>User Name</th>
-                        <th>Email</th>
-                        <th>Amount</th>
+                        <!-- <th>User Name</th>
+                        <th>Email</th> -->
                         <th>Portfolio</th>
-                        <th>Transaction Date</th>
                         <th>Transaction Type</th>
                         <th>Transaction Category</th>
+                        <th>Amount</th>
+                        <th>Transaction Date</th>
                         <th>Payment Mode</th>
                         <!-- <th>View</th> -->
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-transaction>
                     <tr>
-                        <td>{{transaction.userName}}</td>
-                        <td>{{transaction.email}}</td>
-                        <td>{{transaction.amount}}</td>
+                        <!-- <td>{{transaction.userName}}</td>
+                        <td>{{transaction.email}}</td> -->
                         <td>{{transaction.portfolioName}}</td>
-                        <td>{{transaction.transactionDate | date: 'dd/MM/yyyy'}}</td>
                         <td>{{transaction.transactionType}}</td>
                         <td>{{transaction.transactionCategory}}</td>
+                        <td>{{transaction.amount}}</td>
+                        <td>{{transaction.transactionDate | date: 'MM/dd/yyyy'}}</td>
                         <td>{{transaction.paymentMode}}</td>
-                        <!-- <td><p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" [outlined]="true" severity="success"
-                                (onClick)="editTransaction(transaction)" /></td> -->
                     </tr>
                 </ng-template>
             </p-table>
