--- a/src/assets/layout/styles/layout/layout.css
+++ b/src/assets/layout/styles/layout/layout.css
@@ -20,7 +20,8 @@
   left: calc(50vw - 75px);
 }
 
-.preloader-content:before, .preloader-content:after {
+.preloader-content:before,
+.preloader-content:after {
   content: "";
   border: 1em solid var(--primary-color);
   border-radius: 50%;
@@ -42,14 +43,17 @@
     transform: scale(0);
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   100% {
     transform: scale(1);
     opacity: 0;
   }
 }
+
 * {
   box-sizing: border-box;
 }
@@ -93,6 +97,7 @@ a {
   align-items: center;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02), 0px 0px 2px rgba(0, 0, 0, 0.05), 0px 1px 4px rgba(0, 0, 0, 0.08);
 }
+
 .layout-topbar .layout-topbar-logo {
   display: flex;
   align-items: center;
@@ -102,16 +107,19 @@ a {
   width: 300px;
   border-radius: 12px;
 }
+
 .layout-topbar .layout-topbar-logo img {
   height: 2.5rem;
   margin-right: 0.5rem;
 }
+
 .layout-topbar .layout-topbar-logo:focus {
   outline: 0 none;
   outline-offset: 0;
   transition: box-shadow 0.2s;
   box-shadow: var(--focus-ring);
 }
+
 .layout-topbar .layout-topbar-button {
   display: inline-flex;
   justify-content: center;
@@ -124,38 +132,47 @@ a {
   cursor: pointer;
   transition: background-color 0.2s;
 }
+
 .layout-topbar .layout-topbar-button:hover {
   color: var(--text-color);
   background-color: var(--surface-hover);
 }
+
 .layout-topbar .layout-topbar-button:focus {
   outline: 0 none;
   outline-offset: 0;
   transition: box-shadow 0.2s;
   box-shadow: var(--focus-ring);
 }
+
 .layout-topbar .layout-topbar-button i {
   font-size: 1.5rem;
 }
+
 .layout-topbar .layout-topbar-button span {
   font-size: 1rem;
   display: none;
 }
+
 .layout-topbar .layout-menu-button {
   margin-left: 2rem;
 }
+
 .layout-topbar .layout-topbar-menu-button {
   display: none;
 }
+
 .layout-topbar .layout-topbar-menu-button i {
   font-size: 1.25rem;
 }
+
 .layout-topbar .layout-topbar-menu {
   margin: 0 0 0 auto;
   padding: 0;
   list-style: none;
   display: flex;
 }
+
 .layout-topbar .layout-topbar-menu .layout-topbar-button {
   margin-left: 1rem;
 }
@@ -164,19 +181,23 @@ a {
   .layout-topbar {
     justify-content: space-between;
   }
+
   .layout-topbar .layout-topbar-logo {
     width: auto;
     order: 2;
   }
+
   .layout-topbar .layout-menu-button {
     margin-left: 0;
     order: 1;
   }
+
   .layout-topbar .layout-topbar-menu-button {
     display: inline-flex;
     margin-left: 0;
     order: 3;
   }
+
   .layout-topbar .layout-topbar-menu {
     margin-left: 0;
     position: absolute;
@@ -192,9 +213,11 @@ a {
     -webkit-animation: scalein 0.15s linear;
     animation: scalein 0.15s linear;
   }
+
   .layout-topbar .layout-topbar-menu.layout-topbar-menu-mobile-active {
     display: block;
   }
+
   .layout-topbar .layout-topbar-menu .layout-topbar-button {
     margin-left: 0;
     display: flex;
@@ -204,15 +227,18 @@ a {
     border-radius: 12px;
     padding: 1rem;
   }
+
   .layout-topbar .layout-topbar-menu .layout-topbar-button i {
     font-size: 1rem;
     margin-right: 0.5rem;
   }
+
   .layout-topbar .layout-topbar-menu .layout-topbar-button span {
     font-weight: medium;
     display: block;
   }
 }
+
 .layout-sidebar {
   position: fixed;
   width: 300px;
@@ -234,30 +260,37 @@ a {
   padding: 0;
   list-style-type: none;
 }
-.layout-menu .layout-root-menuitem > .layout-menuitem-root-text {
+
+.layout-menu .layout-root-menuitem>.layout-menuitem-root-text {
   font-size: 0.857rem;
   text-transform: uppercase;
   font-weight: 700;
   color: var(--surface-900);
   margin: 0.75rem 0;
 }
-.layout-menu .layout-root-menuitem > a {
+
+.layout-menu .layout-root-menuitem>a {
   display: none;
 }
+
 .layout-menu a {
   user-select: none;
 }
-.layout-menu a.active-menuitem > .layout-submenu-toggler {
+
+.layout-menu a.active-menuitem>.layout-submenu-toggler {
   transform: rotate(-180deg);
 }
-.layout-menu li.active-menuitem > a .layout-submenu-toggler {
+
+.layout-menu li.active-menuitem>a .layout-submenu-toggler {
   transform: rotate(-180deg);
 }
+
 .layout-menu ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
+
 .layout-menu ul a {
   display: flex;
   align-items: center;
@@ -269,46 +302,58 @@ a {
   border-radius: 12px;
   transition: background-color 0.2s, box-shadow 0.2s;
 }
+
 .layout-menu ul a .layout-menuitem-icon {
   margin-right: 0.5rem;
 }
+
 .layout-menu ul a .layout-submenu-toggler {
   font-size: 75%;
   margin-left: auto;
   transition: transform 0.2s;
 }
+
 .layout-menu ul a.active-route {
   font-weight: 700;
   color: var(--primary-color);
 }
+
 .layout-menu ul a:hover {
   background-color: var(--surface-hover);
 }
+
 .layout-menu ul a:focus {
   outline: 0 none;
   outline-offset: 0;
   transition: box-shadow 0.2s;
   box-shadow: inset var(--focus-ring);
 }
+
 .layout-menu ul ul {
   overflow: hidden;
   border-radius: 12px;
 }
+
 .layout-menu ul ul li a {
   margin-left: 1rem;
 }
+
 .layout-menu ul ul li li a {
   margin-left: 2rem;
 }
+
 .layout-menu ul ul li li li a {
   margin-left: 2.5rem;
 }
+
 .layout-menu ul ul li li li li a {
   margin-left: 3rem;
 }
+
 .layout-menu ul ul li li li li li a {
   margin-left: 3.5rem;
 }
+
 .layout-menu ul ul li li li li li li a {
   margin-left: 4rem;
 }
@@ -335,12 +380,14 @@ a {
   z-index: 999;
   box-shadow: -0.25rem 0 1rem rgba(0, 0, 0, 0.15);
 }
+
 .layout-config-button i {
   font-size: 2rem;
   line-height: inherit;
   transform: rotate(0deg);
   transition: transform 1s;
 }
+
 .layout-config-button:hover {
   background: var(--primary-400);
 }
@@ -373,17 +420,21 @@ a {
 }
 
 @media screen and (min-width: 1960px) {
-  .layout-main, .landing-wrapper {
+
+  .layout-main,
+  .landing-wrapper {
     width: 1504px;
     margin-left: auto !important;
     margin-right: auto !important;
   }
 }
+
 @media (min-width: 992px) {
   .layout-wrapper.layout-overlay .layout-main-container {
     margin-left: 0;
     padding-left: 2rem;
   }
+
   .layout-wrapper.layout-overlay .layout-sidebar {
     transform: translateX(-100%);
     left: 0;
@@ -392,32 +443,40 @@ a {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
+
   .layout-wrapper.layout-overlay.layout-overlay-active .layout-sidebar {
     transform: translateX(0);
   }
+
   .layout-wrapper.layout-static .layout-main-container {
     margin-left: 300px;
   }
+
   .layout-wrapper.layout-static.layout-static-inactive .layout-sidebar {
     transform: translateX(-100%);
     left: 0;
   }
+
   .layout-wrapper.layout-static.layout-static-inactive .layout-main-container {
     margin-left: 0;
     padding-left: 2rem;
   }
+
   .layout-wrapper .layout-mask {
     display: none;
   }
 }
+
 @media (max-width: 991px) {
   .blocked-scroll {
     overflow: hidden;
   }
+
   .layout-wrapper .layout-main-container {
     margin-left: 0;
     padding-left: 2rem;
   }
+
   .layout-wrapper .layout-sidebar {
     transform: translateX(-100%);
     left: 0;
@@ -426,6 +485,7 @@ a {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
+
   .layout-wrapper .layout-mask {
     display: none;
     position: fixed;
@@ -436,14 +496,17 @@ a {
     height: 100%;
     background-color: var(--maskbg);
   }
+
   .layout-wrapper.layout-mobile-active .layout-sidebar {
     transform: translateX(0);
   }
+
   .layout-wrapper.layout-mobile-active .layout-mask {
     display: block;
     animation: fadein 0.2s;
   }
 }
+
 .card {
   background: var(--surface-card);
   border: 1px solid var(--surface-border);
@@ -452,22 +515,36 @@ a {
   box-shadow: var(--card-shadow);
   border-radius: 12px;
 }
+
 .card:last-child {
   margin-bottom: 0;
 }
 
-.p-toast.p-toast-top-right, .p-toast.p-toast-top-left, .p-toast.p-toast-top-center {
+.p-toast.p-toast-top-right,
+.p-toast.p-toast-top-left,
+.p-toast.p-toast-top-center {
   top: 100px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 1.5rem 0 1rem 0;
   font-family: inherit;
   font-weight: 500;
   line-height: 1.2;
   color: var(--surface-900);
 }
-h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+
+h1:first-child,
+h2:first-child,
+h3:first-child,
+h4:first-child,
+h5:first-child,
+h6:first-child {
   margin-top: 0;
 }
 
@@ -518,6 +595,7 @@ p {
   margin: 0 0 1rem 0;
   line-height: 1.5;
 }
+
 p:last-child {
   margin-bottom: 0;
 }
