--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,12 +1,12 @@
 <div class="surface-0 flex justify-content-center">
     <div id="home" class="landing-wrapper overflow-hidden">
-        <div class="col-12 p-2 md:p-4"
+        <div class="col-12 p-2 md:p-3"
             style="border-radius:20px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EFE1AF 0%, #C3DCFA 100%);">
             <div class="flex flex-column justify-content-center align-items-center text-center px-3 py-3 md:py-0">
                 <!-- <h3 class="text-gray-900 mb-2">Kares Investments</h3>
                 <span class="text-gray-600 text-1xl">Your Partner in Financial Growth</span> -->
-                <img src="assets/demo/images/landing/Kares.JPG" width="400px" alt="Company logo">
-                <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-1xl mt-4">“Our
+                <img src="assets/layout/images/kares-logo2.png" width="200px" alt="Company logo" height="200px">
+                <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-1xl mt-2">Our
                     team of skilled advisors takes the time to understand your unique financial aspirations, risk
                     tolerance, and personal circumstances. This deep understanding allows us to tailor every
                     recommendation specifically to you. Whether you're planning for retirement, aiming to grow your
@@ -17,12 +17,12 @@
                     cohesive
                     plan. Through ongoing communication, regular reviews, and proactive adjustments, we ensure that
                     your financial strategies evolve with you over time.
-                    ”</p>
+                </p>
                 <!-- <img src="assets/demo/images/landing/Kares.JPG" width="400px" class="mt-4" alt="Company logo"> -->
 
             </div>
         </div>
-        <div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
+        <div id="features" class="py-4 px-4 lg:px-8 mt-3 mx-0 lg:mx-8">
             <div class="grid justify-content-center">
                 <div class="col-12 text-center mb-4">
                     <h2 class="text-900 font-normal mb-2">About Us</h2>
