--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid p-025">
     <div class="col-12 lg:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
@@ -67,12 +67,12 @@
 <div class="row">
     <div class="col-8">
         <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
-            style="width: 100%; height: 400px; display: block;" [(update)]="updateFlag">
+            style="width: 100%; height: 400px; display: block;" [(update)]="updateColumnChartFlag">
         </highcharts-chart>
     </div>
     <div class="col-4">
         <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
-            style="width: 100%; height: 400px; display: block;" [(update)]="updateFlag">
+            style="width: 100%; height: 400px; display: block;" [(update)]="updatePieChartFlag">
         </highcharts-chart>
     </div>
 </div>
