--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
+<div id="hero" class="flex flex-column px-4 lg:px-8 overflow-hidden"
     style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EEEFAF 0%, #C3E3FA 100%);">
     <div class="mx-4 md:mx-8 mt-0 md:mt-4">
         <!-- <p class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700">Whether you are just starting on
@@ -11,13 +11,14 @@
             transparency.</p>
 
         <button pButton pRipple type="button" label="Contact Us" style="margin-bottom:10px; border-radius: 5px"
-            [routerLink]="'/register'"
+            [routerLink]="'/kares/register'"
             class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
     </div>
 </div>
 
-<div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
-    <div class="grid justify-content-center">
+<div id="features">
+    <img src="assets/layout/images/KARES_PIC3.jpg" alt="Kares Logo" width="100%" height="420px">
+    <!-- <div class="grid justify-content-center"> 
         <div class="col-12 text-center mb-4">
             <h2 class="text-900 font-normal mb-2">Why Choose Kares Investments</h2>
         </div>
@@ -67,16 +68,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="col-12 mt-8 mb-8 p-2 md:p-8"
-            style="border-radius:20px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EFE1AF 0%, #C3DCFA 100%);">
-            <div class="flex flex-column justify-content-center align-items-center text-center px-3 py-3 md:py-0">
-                <h3 class="text-gray-900 mb-2">Kares Investments</h3>
-                <span class="text-gray-600 text-1xl">Your Partner in Financial Growth</span>
-                <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-4" style="max-width:800px;">“Some
-                    Text about The Company”</p>
-                <img src="assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo">
 
-            </div>
-        </div> -->
-    </div>
+    </div> -->
 </div>
