--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,9 +2,8 @@
     <div id="home" class="landing-wrapper overflow-hidden">
         <div
             class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
-            <a class="flex align-items-center" href="#" [routerLink]="'/'">
-                <!-- <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
-                    alt="Sakai Logo" height="50" class="mr-0 lg:mr-2"> -->
+            <a class="flex align-items-center" href="#" [routerLink]="'/kares'">
+                <img src="assets/layout/images/kares-logo2.png" alt="Kares Logo" height="50" class="mr-0 lg:mr-2">
                 <span class="text-900 font-medium text-2xl line-height-3 mr-8" style="white-space: nowrap">KARES
                     Investments</span>
             </a>
@@ -23,7 +22,7 @@
                         </a>
                     </li>
                     <li>
-                        <a (click)="router.navigate(['/aboutUs'])" pRipple
+                        <a (click)="router.navigate(['/kares/aboutUs'])" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>About Us</span>
                         </a>
@@ -31,7 +30,7 @@
                 </ul>
                 <div
                     class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-                    <button pButton pRipple label="Already a member? Login" [routerLink]="['/login']"
+                    <button pButton pRipple label="Already a member? Login" [routerLink]="['/kares/login']"
                         class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
                     <!-- <button pButton pRipple label="Register"
                         class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button> -->
