--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,6 +1,8 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo">
         <!-- <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="logo"> -->
+        <!-- <img src="assets/layout/images/kares-logo2.png" alt="Kares logo" style="width: 150px; height: 50px;"> -->
+        <img src="assets/layout/images/kares-logo2.png" alt="Kares Logo" height="50" class="mr-0 lg:mr-2">
         <span>Kares Investments</span>
     </a>
 
