--- a/src/assets/layout/styles/layout/layout.scss
+++ b/src/assets/layout/styles/layout/layout.scss
@@ -15,3 +15,20 @@
 th {
     padding: 0.25rem 0.25rem !important;
 }
+
+.p-tabview .p-tabview-panels {
+    padding: 0.25rem;
+}
+
+.card {
+    padding: 1rem;
+}
+
+.p-datatable .p-datatable-header {
+    border: 1px;
+    padding: 0.25rem;
+}
+
+.layout-main-container {
+    padding: 5rem 1rem 1rem 4rem;
+}
